--- a/03.Chrome Extension/index.css
+++ b/03.Chrome Extension/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 400px;
 }
 
 /* 
@@ -24,4 +25,24 @@ button {
   padding: 10px;
   margin-top: 10px;
   border: 1px solid #5f9341;
+}
+
+#dlt-btn {
+  background-color: white;
+  color:black ;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+}
+
+li {
+  margin-top: 5px;
+}
+
+a {
+  color: #5f9341;
 }
